fix: hero text not aligned properly

--- a/src/app.css
+++ b/src/app.css
@@ -546,8 +546,10 @@ header button:hover {
   }
   .hero {
     img {
+      width: 100%;
       height: 100%;
       border-radius: 8px;
+      object-position: 70%;
     }
     .hero-content {
       padding: 2rem;
@@ -559,22 +561,24 @@ header button:hover {
       text-align: left;
       justify-content: end;
       z-index: 12;
-      padding-left: 60px;
+      padding-left: 30px;
   
 
     }
 
   .hero-content p:nth-child(2) strong {
-      font-size:7rem;
+      font-size:3.4rem;
       color: white;
+      
   }
     .hero-content p {
       color: white;
-      font-size: 2rem;
+      font-size: 1rem;
+      margin-bottom: 0;
   
   }
   .hero-content  .location{
-margin-bottom: 7rem;
+  margin-bottom: 7rem;
   }
 }
 @media (min-width: 1024px) {
